Fix structure, appears to be final fix using css page-break-inside:avoid; to stop wrapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
 .card {
     width: 100%;
     background-color: #3b55af;
-    border-radius: 10px;
+    border-radius: 20px;
     text-align: center;
     align-items: center;
     margin: 1.25rem;
@@ -50,7 +50,6 @@ body {
 #weather {
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
-    border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
 }
